# linthesia

./: .gitignore  BUILD-DEPENDS  CHANGELOG  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  createlinks.sh  meson.build  meson_options.txt  meson_post_install.py
.github/workflows/: c-cpp.yml
debian/: control  copyright  rules
extra/: com.github.linthesia.linthesia.gschema.xml  linthesia.1  linthesia.desktop  linthesia.metainfo.xml  meson.build
graphics/: InterfaceButtons.tga  Makefile.am  all_ButtonLearning.tga  all_ButtonLearningSilent.tga  all_ButtonNotPlayed.tga  all_ButtonPlayedAuto.tga  all_ButtonPlayedHidden.tga  all_ButtonYouPlay.tga  all_ButtonYouPlaySilent.tga  all_Canevas.xcf  meson.build  play_KeyRail.tga  play_Keys.tga  play_Keys.xcf  play_KeysBlack.tga  play_NotesBlackColor.tga  play_NotesWhiteColor.tga  title_BackBox.tga  title_ButtonPageBack.tga  title_ButtonPageNext.tga  title_DirBox.tga  title_EmptyBox.tga  title_Logo.tga  trackbox.tga
graphics-blue/: all_ButtonLearning.tga  all_ButtonLearningSilent.tga  all_ButtonNotPlayed.tga  all_ButtonPlayedAuto.tga  all_ButtonPlayedHidden.tga  all_ButtonYouPlay.tga  all_ButtonYouPlaySilent.tga  color.txt  meson.build  score_RetrySong.tga  title_BackBox.tga  title_ButtonPageBack.tga  title_ButtonPageNext.tga  title_ChooseTracks.tga  title_DirBox.tga  title_EmptyBox.tga  title_Exit.tga  title_GameMusicThemes.tga  title_InputBox.tga  title_OutputBox.tga  title_SongBox.tga  tracks_BackToTitle.tga  tracks_PlaySong.tga
graphics/InterfaceButtons/: InterfaceButtons.xcf.rcm  blue-retry-off-hover.xcf  gray-retry-off-hover.xcf  gray-retry-on-hover.xcf  green-retry-off-hover.xcf  green-retry-on-hover.xcf  orange-retry-off-hover.xcf  orange-retry-on-hover.xcf  red-retry-off.xcf  red-retry-on-hover.xcf  violet-retry-off-hover.xcf  violet-retry-on-hover.xcf  yellow-retry-off-hover.xcf  yellow-retry-off.xcf  yellow-retry-on-hover.xcf  yellow-retry-on.xcf
po/: LINGUAS  POTFILES  en_GB.po  es.po  fr.po  linthesia.pot  meson.build
releases/: Linthesia-latest-x86_64.AppImage
scripts/: delay_screensaver.sh
src/: CompatibleSystem.cpp  CompatibleSystem.h  DeviceTile.cpp  DeviceTile.h  DpmsThread.cpp  DpmsThread.h  EnumTile.cpp  EnumTile.h  FileSelector.cpp  FileSelector.h  FrameAverage.cpp  FrameAverage.h  FrameCounter.h  GameState.cpp  GameState.h  Keyboard.cpp  Keyboard.h  KeyboardDisplay.cpp  KeyboardDisplay.h  LinthesiaError.h  Makefile  Makefile.am  Makefile.in  MenuLayout.cpp  MenuLayout.h  MidiComm.cpp  MidiComm.h  OSGraphics.h  PlayingState.cpp  PlayingState.h  Renderer.cpp  Renderer.h  SharedState.h  SongLibState.cpp  SongLibState.h  SongTile.cpp  SongTile.h  StatsState.cpp  StatsState.h  StringTile.cpp  (+18 more)
src/libmidi/: Makefile  Midi.cpp  Midi.h  MidiEvent.cpp  MidiEvent.h  MidiTrack.cpp  MidiTrack.h  MidiUtil.h  Note.h  meson.build
