install_data(
  'linthesia.png'
  ,'FreeSans.ttf'
  ,'FreeSerif.ttf'
  ,'all_ButtonLearningSilent.tga'
  ,'all_ButtonLearning.tga'
  ,'all_ButtonNotPlayed.tga'
  ,'all_ButtonPlayedAuto.tga'
  ,'all_ButtonPlayedHidden.tga'
  ,'all_ButtonYouPlaySilent.tga'
  ,'all_ButtonYouPlay.tga'
  ,'InterfaceButtons.tga'
  ,'play_KeyHits.tga'
  ,'play_KeyRail.tga'
  ,'play_KeysBlack.tga'
  ,'play_KeyShadow.tga'
  ,'play_Keys.tga'
  ,'play_NotesBlackColor.tga'
  ,'play_NotesBlackShadow.tga'
  ,'play_NotesWhiteColor.tga'
  ,'play_NotesWhiteShadow.tga'
  ,'play_Status2.tga'
  ,'play_Status.tga'
  ,'score_RetrySong.tga'
  ,'stats_text.tga'
  ,'title_BackBox.tga'
  ,'title_ButtonPageBack.tga'
  ,'title_ButtonPageNext.tga'
  ,'title_ChooseTracks.tga'
  ,'title_DirBox.tga'
  ,'title_EmptyBox.tga'
  ,'title_Exit.tga'
  ,'title_GameMusicThemes.tga'
  ,'title_InputBox.tga'
  ,'title_Logo.tga'
  ,'title_OutputBox.tga'
  ,'title_SongBox.tga'
  ,'trackbox.tga'
  ,'tracks_BackToTitle.tga'
  ,'tracks_PlaySong.tga'
  ,install_dir: graphdir
)

install_data(
  'linthesia.png'
  ,install_dir: datadir / 'icons' / 'hicolor' / '128x128' / 'apps'
)
